--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 RPlay v0.01a
 ==============
-Benjamin de Callataÿ <bendecall@gmail.com>
+Benjamin de Callatay <bendecall@gmail.com>
 April 22, 2011
 
 What it is
