--- a/README
+++ b/README
@@ -5,8 +5,12 @@ April 22, 2011
 
 What it is
 ----------
-This program is in alpha version and is not working at the moment
+This program is in alpha version.
 It emulates an Airport Express for the purpose of streaming music from iTunes and compatible iPods. It implements a server for the Apple RAOP protocol.
+
+Installation
+------------
+Double clicking on RPlay.jar in the binaries folder should be enough...
 
 Thanks
 ------
@@ -25,5 +29,7 @@ Changelog
 * 0.01a  April 22, 2011
     * initial release: able to communicate with iTunes (RTSP server ok)
 * 0.01b  May 01, 2011
-    * First working version. Still buggy. Usable.    
+    * First working version. Still buggy. Usable.   
+* 0.01
+    * First binary version. Need feedback.
 
